# OpenSteamworks.Native

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  OpenSteamworks.Native.csproj  OpenSteamworks.Native.nativeproj  README.md  dummysig
.github/workflows/: dotnet.yaml
bootstrappershim/: main.cpp  version.h
cmake/: idesupport.cmake  protobuf_external.cmake
htmlhost/: IHTMLChromeController.h  main.cpp
oldprotoc/: CMakeLists.txt
protobufhack/: main.cpp
serviced/: main.cpp
